Создан Initializer для начального конфигурирования системы. Рефакторинг Datasource, добален класс для модели

--- a/src/main/resources/datasource/datasource.properties
+++ b/src/main/resources/datasource/datasource.properties
@@ -1,7 +1,7 @@
 url=jdbc:postgresql://localhost:5432/weightProject
 driver=org.postgresql.Driver
-username=login
-password=password
+username=postgres
+password=admin123
 minIdle=5
 maxIdle=20
 maxOpenPreparedStatement=100
