--- a/pom.xml
+++ b/pom.xml
@@ -30,8 +30,13 @@
     </properties>
 
 
-
     <dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>5.0.1.RELEASE</version>
+        </dependency>
+
         <dependency>
             <groupId>org.scream3r</groupId>
             <artifactId>jssc</artifactId>
